# usehbn

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  get-hbn  setup.cfg  setup.py
.github/workflows/: pages.yml
.hbn/knowledge/: INDEX.md  distribution-model.md  relay-protocol.md  runtime-command-model.md
.hbn/relay/: INDEX.md
.hbn/relay-archive/: 0001-v1-foundation.md  0002-phase2-distribution.md
agents/: agents.md  claude.md  codex.md  safety.md
core/: command-spec.md  protocol.md  readback-spec.md  semantic-layer.md  validation-rules.md
docs/: ARCHITECTURE.md  DOMAINS.md  FOUNDING-NOTES.md  GUARDIAN.md  HBN-LANGUAGE-v0.1.md  INTENT-RISK-MATRIX.md  LICENSING.md  OPEN-SOURCE-STRATEGY.md  PRINCIPLES.md  PUBLISHING.md  RUNTIME-ADAPTERS.md  TRUTH-BARRIER.md  VBA.md  VISION.md  how-it-works.md  roadmap.md
examples/: prompt-samples.md  usage-examples.md
reports/: HBN-DIAGNOSTICO-REALISTA.md  HBN-ERP-HARDENING-AUDIT.md  HBN-EVOLUTION-ANALYSIS.md  HBN-SEMANTIC-READBACK-SPEC.md  HBN-SUPERPROMPT-ARQUITETURAL.md  REPORT-ERP-MVP.md  REPORT-HBN-HARDENING.md  REPORT-V1-FOUNDATION.md  REPORT-V2-DISTRIBUTION.md  REPORT.md
schemas/: consent.schema.json  guardian.schema.json  intent.schema.json  readback.schema.json  result.schema.json
site/: CNAME  index.html  styles.css
tests/: test_cli_runtime.py  test_consent.py  test_distribution_phase2.py  test_execution.py  test_intent.py  test_result_protocol.py  test_semantic_readback.py  test_trigger.py
(+23 files in other folders)
