[metadata]
name = usehbn
version = 0.2.0
description = HBN — Human Brain Net: an open protocol scaffold for safe, structured, and evolvable AI-assisted software engineering.
long_description = file: README.md
long_description_content_type = text/markdown
author = Luis Mauricio Junqueira Zanin
license = GNU Affero General Public License v3.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hbn = usehbn.cli:main
    usehbn = usehbn.cli:main
